직접 풀어보기 4-4 시작함 스위치로 변경

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,8 @@
         android:text="@string/text1"
         android:textSize="20sp"/>
 
-    <CheckBox
-        android:id="@+id/check_start"
+        <Switch
+        android:id="@+id/switch_start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/check1"/>
